refactor: spring의 event publisher를 이용한 알림 발송으로 변경